[package]
name = "daisy-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.17.1", default-features = false, features = ["ndarray"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
daisy = { version = "0.11.0", features = ["defmt", "seed_1_1"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-alloc = "0.6.0"
panic-probe = "1.0.0"

[build-dependencies]
burn-import = "0.17.1"
