[package]
name = "daisy-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
daisy = { version = "0.11.0", features = ["defmt", "seed_1_1"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
libm = "0.2.15"
microflow = "0.1.3"
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
panic-probe = "1.0.0"
